// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Wrapper should render as expected 1`] = `
<styled.div>
  <div>
    TEST ContentWrapper
  </div>
</styled.div>
`;

exports[`Content Wrapper should render as expected with flex layout 1`] = `
<styled.div
  flex={true}
>
  <div>
    TEST ContentWrapper
  </div>
</styled.div>
`;
